# Chip8Emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build-and-run
src/: CMakeLists.txt  main.cpp
src/hardware/: CMakeLists.txt  cpu.h  display.cpp  display.h  memory.cpp  memory.h  opcode_utils.h
test/: CMakeLists.txt
test/src/: tests.cpp
